# SpecDrivenDevelopmentBase

./: AGENTS.md  README.md  SETUP.md  pyproject.toml
00_vibe_coding/: checks.md
01_lightweight_spec/: checks.md
02_openspec/: checks.md
app/: data.py  main.py  models.py
exercises/00_setup_check/: README.md
exercises/01_lightweight_spec/: README.md  SPEC_TEMPLATE.md
exercises/01_vibe/: PROMPT.md  README.md
exercises/02_openspec/: HOW_TO_USE_OPENSPEC.md  README.md
openspec/: project.md
openspec/specs/reports/: spec.md
tests/: test_reports.py
